--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,8 @@ p {
 }
 
 #contacts {
-    display: none;
+    opacity: 0;
+    transition: 0.2s;
 }
 
 .about_header .contacts p{
@@ -114,10 +115,11 @@ p {
     font-size: 20px;
 }
 
+
 .skills {
     background-size: cover;
     background-repeat: no-repeat;
-    border-top: 10px solid #BF8051;
+    border-top: 10px solid #bf8051;
     min-height: 100vh;
     text-align: center;
 }
@@ -125,7 +127,7 @@ p {
     position: relative;
     margin: 100px auto 70px auto;
     text-align: center;
-    z-index: 1000000; 
+    z-index: 1000000;
 }
 .skills h2:before {
     content: "";
@@ -136,25 +138,32 @@ p {
     top: 58%;
     z-index: -1000000;
 }
-.skills .cards {
-    width: 80%;
+
+.cards {
+    width: 90%;
     margin: 0 auto;
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1rem;
 }
 .skills .cards .skill {
-    margin: 100px auto;
+    margin: 20px auto;
     height: 400px;
-    width: 300px;
-    background: linear-gradient(45deg, #5CBDAA, #95eddc);
+    max-width: 350px;
+    flex-basis: 33.333%;
+    background: linear-gradient(45deg, #5cbdaa, #95eddc);
     box-shadow: 6px 6px 23px -5px #000000;
 }
+
 .card {
     margin: 0 0 20px 0;
 }
+
 .card h1 {
     margin: 100px 0 20px 0;
     text-transform: uppercase;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-size: 22px;
     transition: 0.2s;
 }
@@ -163,99 +172,72 @@ p {
     text-align: left;
     padding: 0 0 0 50px;
     font-size: 18px;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     list-style-type: circle;
     transition: 0.2s;
 }
-.cards .linux:hover .card h1{
+.cards .linux:hover .card h1 {
     margin: 60px 0 20px 0;
     transition: 0.2s;
 }
-.cards .backend:hover .card h1{
+.cards .backend:hover .card h1 {
     margin: 60px 0 20px 0;
     transition: 0.2s;
 }
-.cards .frontend:hover .card h1{
+.cards .frontend:hover .card h1 {
     margin: 60px 0 20px 0;
     transition: 0.2s;
 }
-.cards .linux:hover .list{
+.cards .linux:hover .list {
     opacity: 1;
     transition: 0.2s;
 }
-.cards .backend:hover .list{
+.cards .backend:hover .list {
     opacity: 1;
     transition: 0.2s;
 }
-.cards .frontend:hover .list{
+.cards .frontend:hover .list {
     opacity: 1;
     transition: 0.2s;
 }
 
-
-
-@media screen and (min-width: 800px){
-    h1 {
-        font-size: 15px;
+footer {
+    min-width: 100%;
+    background: #1f1f1f;
+    text-align: center;
+    color: #626262;
+    height: 150px;
+    padding: 70px 0 0 0;
+}
+footer p {
+    font-size: 15px;
+}
+@media (max-width: 767px) {
+    #intro h2 {
+        font-size: 40px;
     }
-    h1::after {
-        height: 8px;
-    }
-}
-
-@media all and (max-width: 800px) and (min-width: 200px) {
     .about_header {
         min-width: 100%;
-        min-height: 100vh;
-    }
-    .about_header h2 {
-        font-size: 100px;
     }
     .about_header h2:before {
         content: "";
-        width: 380px;
-        height: 25px;
+        width: 200px;
+        height: 15px;
         background: #bf8051;
         position: absolute;
-        left: 30%;
-        top: 65%;
+        left: 25%;
+        top: 58%;
         z-index: -1000000;
-    } 
-    .about_header p {
-        margin: 50px auto auto auto;
-        color: #000;
-        font-size: 40px;
     }
-    .about_header .contacts p {
-        font-size: 50px;
+    p {
+        margin: 0 0 30px 0;
+        font-size: 18px;
+        font-family: 'Roboto', sans-serif;
     }
-    #ps {
-        font-size: 20px;
-    }
-    #about_submit_button {
-        margin: 100px 0 100px 0;
-        height: 100px;
-        width: 500px;
-        font-size: 50px;
-        border-radius: 40px;
-        border: 4px solid #bf8051;
-        transition: 0.5s;
-    }
-    #about_submit_button:hover {
-        background: #bf8051;
-        color: #FFFFEF;
-        transition: 0.5s;
-        border: 2px solid #FFFFEF;
-        outline:none;
-    }
-    h1 {
-        font-size: 15px;
-    }
-    h1::after {
-        height: 8px;
+    .card {
+        padding: 1px 0 20px 0;
     }
     .cards {
-        display: contents;
+        display: block;
     }
 }
-
